# glosco

./: Cargo.toml  old_main.rs  old_main_2.rs
src/: coding.rs  lib.rs  main.rs  mesh.rs  observe.rs  sync.rs
vis/: app.gd  app.tscn  global.gd  graph.gd  graph.tscn  host.gd  host.tscn  icon.svg.import  project.godot  theme.tres
vis/assets/default/: host.svg.import
