[package]
name = "glosco"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "^1.1"
clap = { version = "^4.4", features = ["derive"] }
packet = "^0.1.4"
tokio = { version = "1", features = ["full"] }
futures = "^0.3"
rusqlite = { version = "^0.30", features = ["bundled", "trace"] }
gethostname = "^0.4"
dns-parser = "^0.8"
