[package]
name = "glosco"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "^1.1"
clap = { version = "^4.4", features = ["derive"] }
pktparse = "^0.7"
rusqlite = { version = "^0.30", features = ["bundled", "trace"], optional = true }
gethostname = "^0.4"
dns-parser = "^0.8"

[features]
default = ["sqlite"]
sqlite = ["dep:rusqlite"]

[[bin]]
name = "glosco_client"

[[bin]]
name = "glosco_server"
